2008-07-10  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Have PushButton override __getattr__() to
	  provide an imageSize attributes so we can query the size of images
	  within buttons.  (#542483, César Octavio López Natarén)

2008-07-10  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Override select() and activate() in
	  TreeTable class to handle lazy loaded cells.  Also add an
	  expandOrContract() convenience method to the TableCell class.
	  (#542479, César Octavio López Natarén)

2008-06-26  Brad Taylor  <brad@getcoded.net>
	
	* strongwind/accessibles.py: Add an overload to keyCombo to control
	  whether we grabFocus first or not.  This is especially important when
	  you're trying to control focus with keyCombo.

2008-06-12  Brad Taylor  <brad@getcoded.net>
	
	* strongwind/accessibles.py: Implement grabFocus for Dialog and Frame.

2008-01-08  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/cache.py: Document arguments to launchApplication().

2008-01-07  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Add select() to the PageTab class; add
	  assertSelected() to the PageTab and TableCell classes.

2007-12-07  Brad Taylor  <brad@getcoded.net>
	
	* strongwind/accessibles.py: Promote _clickPushButton in Dialog to
	  make the API more consistent with Alert.

2007-12-07  Brad Taylor  <brad@getcoded.net>
	
	* strongwind/accessibles.py: Add cancel() to the Alert class.  I don't
	  know why this wasn't in there to start with...  Also, promote
	  _clickPushButton to being "public", as the HIG suggests that dialogs
	  use an action word instead of just Ok for affirmative alert buttons.

2007-10-29  Jonathan Tai  <jon@tgpsolutions.com>

	* MAINTAINERS:
	add back Brad and add Cody

2007-10-25  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py:
	(Dialog.assertClosed):
	(Alert.assertClosed):
	handle CORBA.COMM_FAILURE like Frame's assertClosed() does
